WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70434
Fill color not applied inside visited links
https://bugs.webkit.org/show_bug.cgi?id=70434
Summary
Fill color not applied inside visited links
Richard Cyganiak
Reported
2011-10-19 13:10:59 PDT
Created
attachment 111662
[details]
Test case: filling of elements inside visited versus unvisited links There's a problem with the filling of descendants of an <a> element whose xlink:href URL has been visited. They are always filled black; the actual specified fill is ignored. See attached test case. I expect both circles to be filled green, but the one whose xlink:href is visited (it's the current document) is filled black instead.
Attachments
Test case: filling of elements inside visited versus unvisited links
(393 bytes, image/svg+xml)
2011-10-19 13:10 PDT
,
Richard Cyganiak
no flags
Details
Fix for fill color not being applied inside visited links
(8.43 KB, patch)
2011-11-28 18:15 PST
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philip Rogers
Comment 1
2011-11-27 12:37:34 PST
I suspect this is a regression caused by
http://trac.webkit.org/changeset/97638
Philip Rogers
Comment 2
2011-11-28 18:15:23 PST
Created
attachment 116864
[details]
Fix for fill color not being applied inside visited links
Antti Koivisto
Comment 3
2011-11-29 16:37:31 PST
Comment on
attachment 116864
[details]
Fix for fill color not being applied inside visited links Good catch!
WebKit Review Bot
Comment 4
2011-11-29 23:56:38 PST
Comment on
attachment 116864
[details]
Fix for fill color not being applied inside visited links Clearing flags on attachment: 116864 Committed
r101452
: <
http://trac.webkit.org/changeset/101452
>
WebKit Review Bot
Comment 5
2011-11-29 23:56:43 PST
All reviewed patches have been landed. Closing bug.
Itsy Bitsy
Comment 6
2011-12-14 07:01:27 PST
Hey y'all! I'm a bit of a n00b when it comes to implementing bug fixes. I am a front-end web developer and was curious as to how i implement the patch for my site. I am having the black svg issues on a circle within an <a> tag. I tried putting the source file in my root folder for the site (still local on my desktop for further development). It just started doing this today - please help!
Philip Rogers
Comment 7
2011-12-14 07:08:27 PST
(In reply to
comment #6
)
> Hey y'all! > > I'm a bit of a n00b when it comes to implementing bug fixes. I am a front-end web developer and was curious as to how i implement the patch for my site. I am having the black svg issues on a circle within an <a> tag. I tried putting the source file in my root folder for the site (still local on my desktop for further development). It just started doing this today - please help!
This is already in Chrome dev channel and will hit Chrome beta channel soon (and Chrome stable shortly after that). If you'd like to test with the patch in, just grab Chrome dev channel. It's not something end users can really do themselves but it will automatically roll out as your favorite WebKit implementation updates (Chrome, Safari, etc)--usually on the order of months.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug