Fix for fill color not being applied inside visited links https://bugs.webkit.org/show_bug.cgi?id=70434

Patch by Philip Rogers <pdr@google.com> on 2011-11-29
Reviewed by Antti Koivisto.

Source/WebCore:

Test: svg/custom/visited-link-color.svg

* rendering/style/SVGRenderStyle.h:
(WebCore::SVGRenderStyle::setFillPaint):
(WebCore::SVGRenderStyle::setStrokePaint):

LayoutTests:

* svg/custom/visited-link-color-expected.png: Added.
* svg/custom/visited-link-color-expected.txt: Added.
* svg/custom/visited-link-color.svg: Added.

Canonical link: https://commits.webkit.org/89933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101452 268f45cc-cd09-0410-ab3c-d52691b4dbfc